fixed put_user_roles , delete_user_roles and documentation
